--- a/cetus-vortal-jpa/.classpath
+++ b/cetus-vortal-jpa/.classpath
@@ -4,12 +4,12 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.jboss.ide.eclipse.as.classpath.core.ejb3.classpathContainer/JBoss EAP 6.1+ Runtime Server"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/commons-util"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly 9.x Runtime">
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly 10.0 Runtime">
 		<attributes>
-			<attribute name="owner.project.facets" value="jst.utility;jpt.jpa"/>
+			<attribute name="owner.project.facets" value="jpt.jpa;jst.utility"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_71">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_74">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
