Desarrollo de la tarea de busqueda general en vortal

--- a/cetus-vortal-ejb/ejbModule/portalBundle.properties
+++ b/cetus-vortal-ejb/ejbModule/portalBundle.properties
@@ -5,6 +5,7 @@ ACRONYM_DTO = DTO
 # C
 # D
 DESCRIPCION = descripcion
+DESCRIPTION = description
 # E
 error_ejb = \: {0}
 error_eliminando_registro = El registro tiene relacion de integridad. {0}
@@ -13,6 +14,7 @@ error_eliminando_registro = El registro tiene relacion de integridad. {0}
 GENERAL_PROCESS=GeneralProcess
 # H
 # I
+ID_APPLICATION = ID_APPLICATION
 # J
 # K
 # L
